RESOLVED FIXED171653
Invalid MediaSource duration value should throw TyperError instead of InvalidStateError
https://bugs.webkit.org/show_bug.cgi?id=171653
Summary Invalid MediaSource duration value should throw TyperError instead of Invalid...
Nael Ouedraogo
Reported 2017-05-04 05:32:44 PDT
Invalid MediaSource duration value should throw TyperError instead of InvalidStateError.
Attachments
Patch (9.33 KB, patch)
2017-05-04 05:44 PDT, Nael Ouedraogo
no flags
Patch (11.26 KB, patch)
2017-05-11 07:47 PDT, Nael Ouedraogo
no flags
Nael Ouedraogo
Comment 1 2017-05-04 05:44:28 PDT
Nael Ouedraogo
Comment 2 2017-05-04 09:59:20 PDT
I am going to fix the remaining failing tests in bug 171668. I think the timeout for mac ports is not related to this patch since it happens also without this patch.
youenn fablet
Comment 3 2017-05-05 19:47:51 PDT
Comment on attachment 309037 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=309037&action=review > LayoutTests/ChangeLog:16 > + * platform/mac/imported/w3c/web-platform-tests/media-source/mediasource-duration-boundaryconditions-expected.txt: Added. Why are we not rebasing LayoutTests/imported/w3c/web-platform-tests/media-source/mediasource-duration-boundaryconditions-expected.txt?
Nael Ouedraogo
Comment 4 2017-05-09 08:27:53 PDT
Thanks for the review. > Why are we not rebasing > LayoutTests/imported/w3c/web-platform-tests/media-source/mediasource- > duration-boundaryconditions-expected.txt? Currently, failure are different for mac and gtk ports. Mac port has a timeout issue when setting duration to zero. Gtk port fails to set duration to POSITIVE_INFINITY. I am going to fix remaining failures for gtk port (bug 171668 and bug 171860 ) and then remove the expected results for gtk platform.
WebKit Commit Bot
Comment 5 2017-05-09 08:58:13 PDT
Comment on attachment 309037 [details] Patch Clearing flags on attachment: 309037 Committed r216508: <http://trac.webkit.org/changeset/216508>
WebKit Commit Bot
Comment 6 2017-05-09 08:58:14 PDT
All reviewed patches have been landed. Closing bug.
Matt Lewis
Comment 7 2017-05-09 12:10:28 PDT
Unsure if this is expected but Sierra is failing but El Capitan is passing. https://build.webkit.org/results/Apple%20Sierra%20Release%20WK2%20(Tests)/r216515%20(1315)/results.html https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=imported%2Fw3c%2Fweb-platform-tests%2Fmedia-source%2Fmediasource-duration-boundaryconditions.html --- /Volumes/Data/slave/sierra-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/media-source/mediasource-duration-boundaryconditions-expected.txt +++ /Volumes/Data/slave/sierra-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/media-source/mediasource-duration-boundaryconditions-actual.txt @@ -1,5 +1,3 @@ - -Harness Error (TIMEOUT), message = null PASS Set duration to 2^31 - 1 PASS Set duration to 1 @@ -12,6 +10,6 @@ PASS Set duration to lowest value. PASS Set duration to a negative double. PASS Set duration to a positive double. -TIMEOUT Set duration to zero Test timed out +PASS Set duration to zero PASS Set duration to NaN
Matt Lewis
Comment 8 2017-05-09 12:15:35 PDT
Reverted r216508 for reason: The layout test enabled in this change is failing on Sierra. Committed r216532: <http://trac.webkit.org/changeset/216532>
Nael Ouedraogo
Comment 9 2017-05-11 07:47:45 PDT
Nael Ouedraogo
Comment 10 2017-05-11 09:16:50 PDT
> Reverted r216508 for reason: > > The layout test enabled in this change is failing on Sierra. Sorry for the trouble. In uploaded patch, I rebased LayoutTests/imported/w3c/web-platform-tests/media-source/mediasource-duration-boundaryconditions-expected.txt so that it passes on Sierra. I added new expected results for El Capitan and I updated Gtk's results.
Chris Dumez
Comment 11 2017-05-12 14:13:34 PDT
Comment on attachment 309709 [details] Patch r=me
Nael Ouedraogo
Comment 12 2017-05-15 01:45:42 PDT
Thanks for the review.
WebKit Commit Bot
Comment 13 2017-05-15 02:14:29 PDT
Comment on attachment 309709 [details] Patch Clearing flags on attachment: 309709 Committed r216860: <http://trac.webkit.org/changeset/216860>
WebKit Commit Bot
Comment 14 2017-05-15 02:14:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.