Invalid MediaSource duration value should throw TyperError instead of InvalidStateError https://bugs.webkit.org/show_bug.cgi?id=171653

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

Rebaseline test results.

* web-platform-tests/media-source/mediasource-duration-boundaryconditions-expected.txt:

Source/WebCore:

Modify MediaSource::setDuration to throw a TypeError when duration value is invalid as per MSE specification
(https://www.w3.org/TR/2016/REC-media-source-20161117/#dom-mediasource-duration).

Update expectations of corresponding WPT test.

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::setDuration):
(WebCore::MediaSource::setDurationInternal):

LayoutTests:

Modify MediaSource::setDuration to throw a TypeError when duration value is invalid as per MSE specification
(https://www.w3.org/TR/2016/REC-media-source-20161117/#dom-mediasource-duration).

Update expectations of corresponding WPT test.

* platform/gtk/TestExpectations:
* platform/gtk/imported/w3c/web-platform-tests/media-source/mediasource-duration-boundaryconditions-expected.txt: Added.
* platform/mac-elcapitan/imported/w3c/web-platform-tests/media-source/mediasource-duration-boundaryconditions-expected.txt: Added.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/189040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216860 268f45cc-cd09-0410-ab3c-d52691b4dbfc